deployment to Hugging Face from github

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,7 @@ jobs:
       - name: Deploy to Hugging Face Spaces
         env:
           ICT_TOKEN: ${{ secrets.ICT_TOKEN }}
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
         run: |
-          git remote add space https://huggingface.co/spaces/muasif/ict-exam-prep
+          git remote add space https://${{ secrets.ICT_TOKEN }}@huggingface.co/spaces/muasif/ict-exam-prep
           git push --force space main
